    without popping it from the stack and use these instructions for a
    more efficient translation of assignments.

    * STCompiler.m (emitPop, updateWithPopStack):
    Optimization to merge pop after store into a single bytecode.

    * STCompiler.m (emitPushLiteral, emitSendSelector:argCount:):
    Remove erroneous code that was increasing the required stack size.

2025-04-13  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.h:
    * STCompiler.m (compileStatements:, initializeCompilationContext,
    destroyCompilationContext, compileStatements:blockFlag:):
    Remove redundant code to discard the temporary variables after the
    compiling the statements of a method.

    * STCompilerUtils.h:
    * STCompilerUtils.m: (STCBlock):
    * STGrammar.y:
    * STGrammar.m:
    * STCompiler.m (addTempVariables:, compileBlock:,
    compileStatements:blockFlag:):
    Refactor to prepare for blocks with temporaries.

    * STCompiler.m (compileMethod:):
    Fix bug where duplicate argument names were not detected in a method
    definition.

    * STGrammar.y:
    Update grammar file to support modern Bison.

    * STGrammar.y:
    * STCompiler.m (compileBlock:):
    Allow for temporaries in blocks.

    * STGrammar.m:
    Rebuilt by bison.

2025-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (value:, value:value:, value:value:value:value:,
    valueWithArgs:): Prevent exception when one of the arguments of the
    value methods is nil.

    * STBlock.m (whileTrue, whileFalse):
    Add methods.

    * NSArray+additions.m (detect:):
    * NSDictionary+additions.m (detect:):
    Return nil if no match was found.

    * NSDictionary+additions.h:
    * NSDictionary+additions.m (keysDo:):
    Add one more collection protocol method for NSDictionary.

    * GNUmakefile:
    * NSSet+additions.h:
    * NSSet+additions.m (do:, select:, reject:, collect:, detect:):
    Implement Smalltalk collection protocol methods for NSSet.
